# lexi-insights

./: .gitignore  Cargo.toml  Makefile  go.mod  main.go  package.json  tailwind.config.js
app/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
app/src/: api.ts  main.ts  util.ts
cmd/insights/: main.go
internal/render/: render.go
public/views/: index.html
scripts/: run
src/: db.rs  main.rs
src/routes/: api.rs  mod.rs  root.rs
